--- a/index.html
+++ b/index.html
@@ -5,247 +5,236 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Chúc Mừng Năm Mới Bính Ngọ</title>
 
-<link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap" rel="stylesheet">
+<!-- Font -->
+<link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Montserrat:wght@400;500&display=swap" rel="stylesheet">
 
 <style>
-*{box-sizing:border-box}
+*{
+    box-sizing:border-box;
+    margin:0;
+    padding:0;
+}
 body{
-  margin:0;
-  height:100vh;
-  display:flex;
-  justify-content:center;
-  align-items:center;
-  background:#fbf3e6;
-  overflow:hidden;
-  font-family:Arial, sans-serif;
+    font-family:'Montserrat',sans-serif;
+    background:#fbf3e3;
+    overflow:hidden;
 }
 
-/* ================= PHONG BÌ ================= */
-#envelope-screen{
-  text-align:center;
-  transition:opacity .8s ease;
+/* ===== PHONG BÌ ===== */
+.wrapper{
+    position:fixed;
+    inset:0;
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    flex-direction:column;
+    z-index:5;
 }
 
 .envelope{
-  width:300px;
-  max-width:80vw;
-  position:relative;
-  perspective:1200px;
+    width:260px;
+    height:170px;
+    position:relative;
+    cursor:pointer;
 }
 
-/* Thân */
-.envelope-body{
-  width:100%;
-  height:180px;
-  background:#d32f2f;
-  border-radius:0 0 20px 20px;
-  position:relative;
-  z-index:2;
+.env-body{
+    width:100%;
+    height:100%;
+    background:#d32f2f;
+    border-radius:0 0 16px 16px;
+    box-shadow:0 12px 30px rgba(0,0,0,.25);
+    position:absolute;
+    bottom:0;
+    z-index:2;
 }
 
-/* Nắp */
-.envelope-flap{
-  width:0;
-  height:0;
-  border-left:150px solid transparent;
-  border-right:150px solid transparent;
-  border-bottom:90px solid #b71c1c;
-  position:absolute;
-  top:-90px;
-  left:0;
-  transform-origin:bottom center;
-  transform:rotateX(180deg); /* ĐÓNG */
-  transition:transform .9s ease;
-  z-index:4;
+.env-flap{
+    position:absolute;
+    top:0;
+    left:0;
+    width:100%;
+    height:100%;
+    background:#b71c1c;
+    clip-path:polygon(0 0,100% 0,50% 55%);
+    transform-origin:top;
+    transition:transform .9s ease;
+    z-index:3;
 }
 
-.open .envelope-flap{
-  transform:rotateX(0deg); /* MỞ */
+.envelope.open .env-flap{
+    transform:rotateX(180deg);
 }
 
-/* ================= THIỆP TRƯỢT ================= */
-.card-preview{
-  position:absolute;
-  bottom:20px;
-  left:50%;
-  transform:translateX(-50%) translateY(120px);
-  width:92%;
-  height:140px;
-  background:#fff;
-  border-radius:14px;
-  box-shadow:0 10px 30px rgba(0,0,0,.25);
-  z-index:1;
-  transition:transform 1s ease;
-}
-
-.open .card-preview{
-  transform:translateX(-50%) translateY(-140px);
-}
-
-/* ================= NÚT ================= */
-button{
-  margin-top:20px;
-  padding:12px 34px;
-  border:none;
-  border-radius:999px;
-  background:#c62828;
-  color:#fff;
-  font-size:16px;
-  cursor:pointer;
-}
-
-/* ================= THIỆP FULL ================= */
-#card-screen{
-  position:fixed;
-  inset:0;
-  display:flex;
-  justify-content:center;
-  align-items:center;
-  background:url("tet-bg.png") center/cover no-repeat;
-  opacity:0;
-  pointer-events:none;
-  transition:opacity 1s ease;
-}
-
-#card-screen.show{
-  opacity:1;
-  pointer-events:auto;
-}
-
+/* ===== THIỆP ===== */
 .card{
-  background:#ffffffee;
-  width:90%;
-  max-width:560px;
-  padding:36px 30px;
-  border-radius:24px;
-  text-align:center;
-  box-shadow:0 30px 60px rgba(0,0,0,.35);
+    position:absolute;
+    bottom:20px;
+    left:50%;
+    transform:translateX(-50%) translateY(140px);
+    width:88vw;
+    max-width:520px;
+    background:#fff;
+    border-radius:22px;
+    padding:28px 26px;
+    box-shadow:0 30px 60px rgba(0,0,0,.25);
+    text-align:center;
+    opacity:0;
+    transition:transform 1s ease, opacity .8s ease;
+    z-index:1;
 }
 
-h1{
-  font-family:'Dancing Script', cursive;
-  font-size:40px;
-  color:#b71c1c;
-  margin-bottom:20px;
+.envelope.open + .card{
+    transform:translateX(-50%) translateY(-40px);
+    opacity:1;
 }
 
-p{
-  font-size:16px;
-  line-height:1.75;
-  color:#333;
-  white-space:pre-line;
+/* ===== NỘI DUNG ===== */
+.card h1{
+    font-family:'Great Vibes',cursive;
+    font-size:42px;
+    color:#c62828;
+    margin-bottom:18px;
 }
 
-/* ================= PHÁO HOA TIA DÀI ================= */
-.firework{
-  position:fixed;
-  width:4px;
-  height:4px;
-  border-radius:50%;
-  animation:explode 1.6s ease-out forwards;
+.card p{
+    font-size:16px;
+    line-height:1.8;
+    color:#333;
+    white-space:pre-line;
 }
 
-@keyframes explode{
-  0%{transform:scale(0);opacity:1}
-  100%{transform:scale(28);opacity:0}
+/* ===== NÚT ===== */
+.btn{
+    margin-top:22px;
+    padding:12px 26px;
+    border:none;
+    border-radius:30px;
+    background:#d32f2f;
+    color:#fff;
+    font-size:16px;
+    cursor:pointer;
+    box-shadow:0 8px 18px rgba(0,0,0,.2);
 }
 
-@media(max-width:480px){
-  h1{font-size:32px}
+/* ===== NỀN TẾT ===== */
+.bg{
+    position:fixed;
+    inset:0;
+    background:url("tet-bg.png") center/cover no-repeat;
+    opacity:0;
+    transition:opacity 1s ease;
+    z-index:-1;
+}
+
+.show-bg{
+    opacity:1;
+}
+
+/* ===== PHÁO HOA ===== */
+canvas{
+    position:fixed;
+    inset:0;
+    pointer-events:none;
+    z-index:0;
 }
 </style>
 </head>
 
 <body>
 
-<!-- PHONG BÌ -->
-<div id="envelope-screen">
-  <div class="envelope" id="env">
-    <div class="envelope-flap"></div>
-    <div class="card-preview"></div>
-    <div class="envelope-body"></div>
-  </div>
-  <button onclick="openCard()">Mở Thiệp</button>
+<div class="bg" id="bg"></div>
+<canvas id="fireworks"></canvas>
+
+<div class="wrapper">
+    <div class="envelope" id="env">
+        <div class="env-flap"></div>
+        <div class="env-body"></div>
+    </div>
+
+    <div class="card" id="card">
+        <h1>Chúc Mừng Năm Mới Bính Ngọ</h1>
+        <p id="wish"></p>
+        <button class="btn">An Khang – Thịnh Vượng</button>
+    </div>
 </div>
 
-<!-- THIỆP -->
-<div id="card-screen">
-  <div class="card">
-    <h1>Chúc Mừng Năm Mới Bính Ngọ</h1>
-    <p id="wish"></p>
-  </div>
-</div>
-
-<audio id="music" src="tet-music.mp3" loop></audio>
+<audio id="music" src="tet-music.mp3" preload="auto"></audio>
 
 <script>
+/* ===== LỜI CHÚC ===== */
 const wishes=[
-`Năm mới Bính Ngọ gõ cửa,
-chúc bạn luôn mạnh khỏe, tinh thần vững vàng
-và trái tim luôn đầy nhiệt huyết.
-Mong mọi nỗ lực trong học tập và cuộc sống
-đều được đền đáp xứng đáng,
-mỗi ngày trôi qua là một bước tiến mới
-trên con đường bạn đã chọn.`,
+`Xuân Bính Ngọ đã về, mang theo những khởi đầu mới và hy vọng mới.
 
-`Xuân về mang theo hy vọng mới,
-chúc bạn một năm an yên và bền bỉ.
-Dù thử thách có đến,
-hãy luôn tin vào bản thân mình,
-giữ vững ý chí và không ngừng cố gắng.
-Thành công sẽ đến với những ai kiên trì
-và không bỏ cuộc.`,
+Chúc bạn bước vào năm mới với một trái tim an yên, một tinh thần mạnh mẽ và một ý chí không ngừng vươn lên phía trước.
+Mong rằng mỗi ngày học tập đều là một ngày tiến bộ, mỗi nỗ lực đều được ghi nhận và mỗi ước mơ đều có cơ hội thành hình.
 
-`Năm mới không chỉ là khởi đầu,
-mà là cơ hội để bạn trưởng thành hơn.
-Chúc bạn học tập tiến bộ,
-cuộc sống nhiều niềm vui,
-gia đình luôn ấm áp yêu thương
-và mỗi ngày đều có lý do để mỉm cười.`
+Chúc bạn đủ kiên trì để vượt qua thử thách, đủ tự tin để theo đuổi hoài bão và đủ bình tĩnh để trân trọng từng khoảnh khắc đang có.
+Năm mới, mong gia đình luôn bình an, cuộc sống tràn đầy năng lượng tích cực và tương lai ngày càng rộng mở.
+
+Chúc Mừng Năm Mới – An Khang, May Mắn và Thành Công. 🌸`
 ];
 
-function openCard(){
-  const env=document.getElementById("env");
-  env.classList.add("open");
+document.getElementById("wish").innerText=
+wishes[Math.floor(Math.random()*wishes.length)];
 
-  setTimeout(()=>{
-    document.getElementById("envelope-screen").style.opacity="0";
-  },1200);
+/* ===== TƯƠNG TÁC ===== */
+const env=document.getElementById("env");
+const bg=document.getElementById("bg");
+const music=document.getElementById("music");
 
-  setTimeout(()=>{
-    document.getElementById("envelope-screen").style.display="none";
-    document.getElementById("card-screen").classList.add("show");
-    document.getElementById("wish").innerText =
-      wishes[Math.floor(Math.random()*wishes.length)];
+env.onclick=()=>{
+    env.classList.add("open");
+    bg.classList.add("show-bg");
     playMusic();
-    fireworks();
-  },2000);
-}
+    startFireworks();
+};
 
+/* ===== NHẠC FADE IN ===== */
 function playMusic(){
-  const m=document.getElementById("music");
-  m.volume=0;
-  m.play();
-  let v=0;
-  const fade=setInterval(()=>{
-    if(v<1){v+=0.03;m.volume=v}
-    else clearInterval(fade);
-  },100);
+    music.volume=0;
+    music.play();
+    let v=0;
+    const fade=setInterval(()=>{
+        v+=0.02;
+        music.volume=Math.min(v,1);
+        if(v>=1) clearInterval(fade);
+    },100);
 }
 
-/* PHÁO HOA NHIỀU TẦNG */
-function fireworks(){
-  setInterval(()=>{
-    for(let i=0;i<10;i++){
-      const f=document.createElement("div");
-      f.className="firework";
-      f.style.left=Math.random()*100+"vw";
-      f.style.top=Math.random()*60+"vh";
-      f.style.background=`hsl(${Math.random()*360},100%,60%)`;
-      document.body.appendChild(f);
-      setTimeout(()=>f.remove(),1600);
+/* ===== PHÁO HOA TIA DÀI ===== */
+const canvas=document.getElementById("fireworks");
+const ctx=canvas.getContext("2d");
+canvas.width=innerWidth;
+canvas.height=innerHeight;
+
+window.onresize=()=>{
+    canvas.width=innerWidth;
+    canvas.height=innerHeight;
+};
+
+function firework(){
+    const x=Math.random()*canvas.width;
+    const y=Math.random()*canvas.height/2;
+    for(let i=0;i<80;i++){
+        const angle=Math.random()*Math.PI*2;
+        const speed=Math.random()*6+3;
+        let px=x,py=y;
+        let life=60;
+        const color=`hsl(${Math.random()*360},100%,60%)`;
+        const interval=setInterval(()=>{
+            ctx.fillStyle=color;
+            ctx.fillRect(px,py,3,3);
+            px+=Math.cos(angle)*speed;
+            py+=Math.sin(angle)*speed;
+            life--;
+            if(life<=0) clearInterval(interval);
+        },16);
     }
-  },500);
+}
+
+function startFireworks(){
+    setInterval(firework,800);
 }
 </script>
 
