--- a/index.html
+++ b/index.html
@@ -5,236 +5,233 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Chúc Mừng Năm Mới Bính Ngọ</title>
 
-<!-- Font -->
-<link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Montserrat:wght@400;500&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Be+Vietnam+Pro:wght@400;500&display=swap" rel="stylesheet">
 
 <style>
-*{
-    box-sizing:border-box;
-    margin:0;
-    padding:0;
-}
+*{box-sizing:border-box}
 body{
-    font-family:'Montserrat',sans-serif;
-    background:#fbf3e3;
-    overflow:hidden;
+  margin:0;
+  font-family:'Be Vietnam Pro',sans-serif;
+  background:#fbf4e6;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  height:100vh;
+  overflow:hidden;
 }
 
-/* ===== PHONG BÌ ===== */
-.wrapper{
-    position:fixed;
-    inset:0;
-    display:flex;
-    justify-content:center;
-    align-items:center;
-    flex-direction:column;
-    z-index:5;
+/* PHÁO HOA */
+canvas{
+  position:fixed;
+  inset:0;
+  z-index:1;
+  pointer-events:none;
+}
+
+/* PHONG BÌ */
+.envelope-wrap{
+  position:relative;
+  z-index:3;
+  text-align:center;
 }
 
 .envelope{
-    width:260px;
-    height:170px;
-    position:relative;
-    cursor:pointer;
+  width:240px;
+  height:160px;
+  background:#d32f2f;
+  border-radius:0 0 14px 14px;
+  position:relative;
+  box-shadow:0 12px 25px rgba(0,0,0,.25);
+  overflow:hidden;
 }
 
-.env-body{
-    width:100%;
-    height:100%;
-    background:#d32f2f;
-    border-radius:0 0 16px 16px;
-    box-shadow:0 12px 30px rgba(0,0,0,.25);
-    position:absolute;
-    bottom:0;
-    z-index:2;
+.envelope::before{
+  content:'';
+  position:absolute;
+  inset:0;
+  background:linear-gradient(135deg,#e53935,#b71c1c);
 }
 
-.env-flap{
-    position:absolute;
-    top:0;
-    left:0;
-    width:100%;
-    height:100%;
-    background:#b71c1c;
-    clip-path:polygon(0 0,100% 0,50% 55%);
-    transform-origin:top;
-    transition:transform .9s ease;
-    z-index:3;
+.flap{
+  position:absolute;
+  top:0;
+  left:0;
+  width:100%;
+  height:50%;
+  background:#b71c1c;
+  clip-path:polygon(0 0,100% 0,50% 100%);
+  transform-origin:top center;
+  transition:transform 1s ease;
+  z-index:4;
 }
 
-.envelope.open .env-flap{
-    transform:rotateX(180deg);
+.envelope.open .flap{
+  transform:rotateX(180deg);
 }
 
-/* ===== THIỆP ===== */
+/* THIỆP */
 .card{
-    position:absolute;
-    bottom:20px;
-    left:50%;
-    transform:translateX(-50%) translateY(140px);
-    width:88vw;
-    max-width:520px;
-    background:#fff;
-    border-radius:22px;
-    padding:28px 26px;
-    box-shadow:0 30px 60px rgba(0,0,0,.25);
-    text-align:center;
-    opacity:0;
-    transition:transform 1s ease, opacity .8s ease;
-    z-index:1;
+  position:absolute;
+  left:50%;
+  bottom:12px;
+  transform:translateX(-50%) translateY(120%);
+  width:280px;
+  background:#fff;
+  border-radius:18px;
+  padding:26px 24px;
+  box-shadow:0 18px 40px rgba(0,0,0,.3);
+  text-align:center;
+  transition:transform 1.2s ease;
+  z-index:2;
 }
 
-.envelope.open + .card{
-    transform:translateX(-50%) translateY(-40px);
-    opacity:1;
+.envelope.open .card{
+  transform:translateX(-50%) translateY(-110%);
 }
 
-/* ===== NỘI DUNG ===== */
+/* NỘI DUNG */
 .card h1{
-    font-family:'Great Vibes',cursive;
-    font-size:42px;
-    color:#c62828;
-    margin-bottom:18px;
+  font-family:'Great Vibes',cursive;
+  color:#c62828;
+  font-size:36px;
+  margin-bottom:14px;
 }
 
 .card p{
-    font-size:16px;
-    line-height:1.8;
-    color:#333;
-    white-space:pre-line;
+  font-size:15px;
+  line-height:1.6;
+  color:#333;
 }
 
-/* ===== NÚT ===== */
-.btn{
-    margin-top:22px;
-    padding:12px 26px;
-    border:none;
-    border-radius:30px;
-    background:#d32f2f;
-    color:#fff;
-    font-size:16px;
-    cursor:pointer;
-    box-shadow:0 8px 18px rgba(0,0,0,.2);
+/* NÚT */
+button{
+  margin-top:16px;
+  padding:10px 26px;
+  border:none;
+  border-radius:999px;
+  background:#d32f2f;
+  color:#fff;
+  font-size:16px;
+  cursor:pointer;
 }
 
-/* ===== NỀN TẾT ===== */
-.bg{
-    position:fixed;
-    inset:0;
-    background:url("tet-bg.png") center/cover no-repeat;
-    opacity:0;
-    transition:opacity 1s ease;
-    z-index:-1;
-}
-
-.show-bg{
-    opacity:1;
-}
-
-/* ===== PHÁO HOA ===== */
-canvas{
-    position:fixed;
-    inset:0;
-    pointer-events:none;
-    z-index:0;
+/* NỀN SAU KHI MỞ */
+body.opened{
+  background:url('tet-bg.png') center/cover no-repeat;
 }
 </style>
 </head>
 
 <body>
 
-<div class="bg" id="bg"></div>
 <canvas id="fireworks"></canvas>
 
-<div class="wrapper">
-    <div class="envelope" id="env">
-        <div class="env-flap"></div>
-        <div class="env-body"></div>
-    </div>
+<div class="envelope-wrap">
+  <div class="envelope" id="envelope">
+    <div class="flap"></div>
 
-    <div class="card" id="card">
-        <h1>Chúc Mừng Năm Mới Bính Ngọ</h1>
-        <p id="wish"></p>
-        <button class="btn">An Khang – Thịnh Vượng</button>
+    <div class="card">
+      <h1>Chúc Mừng Năm Mới<br>Bính Ngọ</h1>
+      <p>
+        Chúc bạn bước vào năm mới với một trái tim an yên,  
+        một tinh thần mạnh mẽ và niềm tin vững vàng vào bản thân.  
+        Mong rằng mỗi ngày trôi qua đều mang đến cho bạn thêm động lực,  
+        thêm hy vọng và những bước tiến nhỏ nhưng chắc chắn trên con đường học tập và cuộc sống.  
+        Dù có thử thách hay khó khăn, hãy luôn nhớ rằng bạn đủ khả năng để vượt qua  
+        và xứng đáng với những điều tốt đẹp phía trước.
+        <br><br>
+        Năm mới an khang – may mắn – bình an và thành công 🌸
+      </p>
     </div>
+  </div>
+
+  <button id="openBtn">Mở Thiệp</button>
 </div>
 
-<audio id="music" src="tet-music.mp3" preload="auto"></audio>
+<audio id="music" src="tet-music.mp3"></audio>
 
 <script>
-/* ===== LỜI CHÚC ===== */
-const wishes=[
-`Xuân Bính Ngọ đã về, mang theo những khởi đầu mới và hy vọng mới.
+/* MỞ THIỆP + NHẠC */
+const btn=document.getElementById('openBtn');
+const env=document.getElementById('envelope');
+const music=document.getElementById('music');
 
-Chúc bạn bước vào năm mới với một trái tim an yên, một tinh thần mạnh mẽ và một ý chí không ngừng vươn lên phía trước.
-Mong rằng mỗi ngày học tập đều là một ngày tiến bộ, mỗi nỗ lực đều được ghi nhận và mỗi ước mơ đều có cơ hội thành hình.
+btn.onclick=()=>{
+  env.classList.add('open');
+  document.body.classList.add('opened');
+  btn.style.display='none';
 
-Chúc bạn đủ kiên trì để vượt qua thử thách, đủ tự tin để theo đuổi hoài bão và đủ bình tĩnh để trân trọng từng khoảnh khắc đang có.
-Năm mới, mong gia đình luôn bình an, cuộc sống tràn đầy năng lượng tích cực và tương lai ngày càng rộng mở.
+  music.volume=0;
+  music.play();
+  let v=0;
+  const fade=setInterval(()=>{
+    v+=0.02;
+    music.volume=Math.min(v,1);
+    if(v>=1)clearInterval(fade);
+  },100);
 
-Chúc Mừng Năm Mới – An Khang, May Mắn và Thành Công. 🌸`
-];
-
-document.getElementById("wish").innerText=
-wishes[Math.floor(Math.random()*wishes.length)];
-
-/* ===== TƯƠNG TÁC ===== */
-const env=document.getElementById("env");
-const bg=document.getElementById("bg");
-const music=document.getElementById("music");
-
-env.onclick=()=>{
-    env.classList.add("open");
-    bg.classList.add("show-bg");
-    playMusic();
-    startFireworks();
+  startFireworks();
 };
 
-/* ===== NHẠC FADE IN ===== */
-function playMusic(){
-    music.volume=0;
-    music.play();
-    let v=0;
-    const fade=setInterval(()=>{
-        v+=0.02;
-        music.volume=Math.min(v,1);
-        if(v>=1) clearInterval(fade);
-    },100);
+/* PHÁO HOA ĐẸP */
+const canvas=document.getElementById('fireworks');
+const ctx=canvas.getContext('2d');
+function resize(){canvas.width=innerWidth;canvas.height=innerHeight}
+resize();window.onresize=resize;
+
+let particles=[];
+class Particle{
+  constructor(x,y,a,s,c){
+    this.x=x;this.y=y;
+    this.vx=Math.cos(a)*s;
+    this.vy=Math.sin(a)*s;
+    this.life=90;
+    this.alpha=1;
+    this.color=c;
+  }
+  update(){
+    this.vy+=0.03;
+    this.x+=this.vx;
+    this.y+=this.vy;
+    this.alpha-=0.012;
+    this.life--;
+  }
+  draw(){
+    ctx.save();
+    ctx.globalAlpha=this.alpha;
+    ctx.beginPath();
+    ctx.arc(this.x,this.y,2.2,0,Math.PI*2);
+    ctx.fillStyle=this.color;
+    ctx.fill();
+    ctx.restore();
+  }
 }
 
-/* ===== PHÁO HOA TIA DÀI ===== */
-const canvas=document.getElementById("fireworks");
-const ctx=canvas.getContext("2d");
-canvas.width=innerWidth;
-canvas.height=innerHeight;
-
-window.onresize=()=>{
-    canvas.width=innerWidth;
-    canvas.height=innerHeight;
-};
-
-function firework(){
-    const x=Math.random()*canvas.width;
-    const y=Math.random()*canvas.height/2;
-    for(let i=0;i<80;i++){
-        const angle=Math.random()*Math.PI*2;
-        const speed=Math.random()*6+3;
-        let px=x,py=y;
-        let life=60;
-        const color=`hsl(${Math.random()*360},100%,60%)`;
-        const interval=setInterval(()=>{
-            ctx.fillStyle=color;
-            ctx.fillRect(px,py,3,3);
-            px+=Math.cos(angle)*speed;
-            py+=Math.sin(angle)*speed;
-            life--;
-            if(life<=0) clearInterval(interval);
-        },16);
-    }
+function boom(){
+  const x=Math.random()*canvas.width;
+  const y=Math.random()*canvas.height*0.45;
+  const hue=Math.random()*360;
+  for(let i=0;i<160;i++){
+    particles.push(new Particle(
+      x,y,
+      Math.random()*Math.PI*2,
+      Math.random()*4+2,
+      `hsl(${hue},100%,65%)`
+    ));
+  }
 }
+
+function animate(){
+  ctx.clearRect(0,0,canvas.width,canvas.height);
+  particles=particles.filter(p=>p.life>0);
+  particles.forEach(p=>{p.update();p.draw();});
+  requestAnimationFrame(animate);
+}
+animate();
 
 function startFireworks(){
-    setInterval(firework,800);
+  boom();
+  setInterval(boom,1300);
 }
 </script>
 
