--- a/index.html
+++ b/index.html
@@ -3,20 +3,20 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Chúc Mừng Năm Mới Bính Ngọ</title>
+<title>Chúc Mừng Năm Mới</title>
 
-<link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Be+Vietnam+Pro:wght@400;500&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Be+Vietnam+Pro&display=swap" rel="stylesheet">
 
 <style>
 *{box-sizing:border-box}
 body{
   margin:0;
   font-family:'Be Vietnam Pro',sans-serif;
-  background:#fbf4e6;
-  display:flex;
-  align-items:center;
-  justify-content:center;
   height:100vh;
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  background:url('tet-bg.png') center/cover no-repeat;
   overflow:hidden;
 }
 
@@ -28,96 +28,89 @@ canvas{
   pointer-events:none;
 }
 
-/* PHONG BÌ */
-.envelope-wrap{
+/* WRAP */
+.wrapper{
   position:relative;
-  z-index:3;
-  text-align:center;
+  z-index:5;
 }
 
+/* ENVELOPE */
 .envelope{
-  width:240px;
-  height:160px;
-  background:#d32f2f;
-  border-radius:0 0 14px 14px;
   position:relative;
-  box-shadow:0 12px 25px rgba(0,0,0,.25);
-  overflow:hidden;
+  width:260px;
+  height:170px;
 }
 
-.envelope::before{
-  content:'';
+.envelope-body{
   position:absolute;
-  inset:0;
-  background:linear-gradient(135deg,#e53935,#b71c1c);
+  bottom:0;
+  width:100%;
+  height:120px;
+  background:#d32f2f;
+  border-radius:0 0 16px 16px;
+  box-shadow:0 14px 30px rgba(0,0,0,.35);
+  z-index:2;
 }
 
-.flap{
+/* FLAP */
+.envelope-flap{
   position:absolute;
   top:0;
-  left:0;
   width:100%;
-  height:50%;
+  height:80px;
   background:#b71c1c;
   clip-path:polygon(0 0,100% 0,50% 100%);
-  transform-origin:top center;
+  transform-origin:top;
   transition:transform 1s ease;
   z-index:4;
 }
 
-.envelope.open .flap{
+.envelope.open .envelope-flap{
   transform:rotateX(180deg);
 }
 
-/* THIỆP */
+/* CARD */
 .card{
   position:absolute;
   left:50%;
-  bottom:12px;
-  transform:translateX(-50%) translateY(120%);
-  width:280px;
+  bottom:20px;
+  transform:translateX(-50%) translateY(140%);
+  width:300px;
   background:#fff;
-  border-radius:18px;
-  padding:26px 24px;
-  box-shadow:0 18px 40px rgba(0,0,0,.3);
+  border-radius:20px;
+  padding:26px;
   text-align:center;
+  box-shadow:0 20px 45px rgba(0,0,0,.35);
   transition:transform 1.2s ease;
-  z-index:2;
+  z-index:3;
 }
 
-.envelope.open .card{
+.envelope.show-card .card{
   transform:translateX(-50%) translateY(-110%);
 }
 
-/* NỘI DUNG */
 .card h1{
   font-family:'Great Vibes',cursive;
   color:#c62828;
-  font-size:36px;
-  margin-bottom:14px;
+  font-size:38px;
 }
 
 .card p{
   font-size:15px;
-  line-height:1.6;
+  line-height:1.7;
   color:#333;
 }
 
-/* NÚT */
+/* BUTTON */
 button{
-  margin-top:16px;
-  padding:10px 26px;
+  margin-top:20px;
+  padding:10px 28px;
   border:none;
   border-radius:999px;
   background:#d32f2f;
   color:#fff;
   font-size:16px;
   cursor:pointer;
-}
-
-/* NỀN SAU KHI MỞ */
-body.opened{
-  background:url('tet-bg.png') center/cover no-repeat;
 }
 </style>
 </head>
@@ -126,39 +119,40 @@ body.opened{
 
 <canvas id="fireworks"></canvas>
 
-<div class="envelope-wrap">
-  <div class="envelope" id="envelope">
-    <div class="flap"></div>
+<div class="wrapper">
+  <div class="envelope" id="env">
+    <div class="envelope-flap"></div>
+    <div class="envelope-body"></div>
 
     <div class="card">
-      <h1>Chúc Mừng Năm Mới<br>Bính Ngọ</h1>
+      <h1>Chúc Mừng Năm Mới</h1>
       <p>
-        Chúc bạn bước vào năm mới với một trái tim an yên,  
-        một tinh thần mạnh mẽ và niềm tin vững vàng vào bản thân.  
-        Mong rằng mỗi ngày trôi qua đều mang đến cho bạn thêm động lực,  
-        thêm hy vọng và những bước tiến nhỏ nhưng chắc chắn trên con đường học tập và cuộc sống.  
-        Dù có thử thách hay khó khăn, hãy luôn nhớ rằng bạn đủ khả năng để vượt qua  
-        và xứng đáng với những điều tốt đẹp phía trước.
+        Chúc bạn bước sang năm mới với một trái tim bình an,
+        một tinh thần kiên định và niềm tin vào chính mình.
+        Mong rằng từng ngày trôi qua đều mang theo những bài học quý giá,
+        những niềm vui giản dị và động lực để bạn tiếp tục cố gắng.
+        Dù con đường phía trước còn dài,
+        hãy tin rằng mọi nỗ lực hôm nay sẽ trở thành thành quả mai sau.
         <br><br>
-        Năm mới an khang – may mắn – bình an và thành công 🌸
+        An khang – May mắn – Thành công 🌸
       </p>
     </div>
   </div>
 
-  <button id="openBtn">Mở Thiệp</button>
+  <button id="open">Mở Thiệp</button>
 </div>
 
 <audio id="music" src="tet-music.mp3"></audio>
 
 <script>
-/* MỞ THIỆP + NHẠC */
-const btn=document.getElementById('openBtn');
-const env=document.getElementById('envelope');
+/* OPEN */
+const env=document.getElementById('env');
+const btn=document.getElementById('open');
 const music=document.getElementById('music');
 
 btn.onclick=()=>{
   env.classList.add('open');
-  document.body.classList.add('opened');
+  setTimeout(()=>env.classList.add('show-card'),400);
   btn.style.display='none';
 
   music.volume=0;
@@ -166,14 +160,14 @@ btn.onclick=()=>{
   let v=0;
   const fade=setInterval(()=>{
     v+=0.02;
-    music.volume=Math.min(v,1);
+    music.volume=v;
     if(v>=1)clearInterval(fade);
   },100);
 
   startFireworks();
 };
 
-/* PHÁO HOA ĐẸP */
+/* FIREWORKS */
 const canvas=document.getElementById('fireworks');
 const ctx=canvas.getContext('2d');
 function resize(){canvas.width=innerWidth;canvas.height=innerHeight}
@@ -181,57 +175,56 @@ resize();window.onresize=resize;
 
 let particles=[];
 class Particle{
-  constructor(x,y,a,s,c){
+  constructor(x,y,angle,speed,color){
     this.x=x;this.y=y;
-    this.vx=Math.cos(a)*s;
-    this.vy=Math.sin(a)*s;
-    this.life=90;
+    this.vx=Math.cos(angle)*speed;
+    this.vy=Math.sin(angle)*speed;
+    this.life=80;
     this.alpha=1;
-    this.color=c;
+    this.color=color;
   }
   update(){
-    this.vy+=0.03;
+    this.vy+=0.04;
     this.x+=this.vx;
     this.y+=this.vy;
-    this.alpha-=0.012;
+    this.alpha-=0.015;
     this.life--;
   }
   draw(){
-    ctx.save();
     ctx.globalAlpha=this.alpha;
     ctx.beginPath();
     ctx.arc(this.x,this.y,2.2,0,Math.PI*2);
     ctx.fillStyle=this.color;
     ctx.fill();
-    ctx.restore();
+    ctx.globalAlpha=1;
   }
 }
 
-function boom(){
+function explode(){
   const x=Math.random()*canvas.width;
   const y=Math.random()*canvas.height*0.45;
   const hue=Math.random()*360;
-  for(let i=0;i<160;i++){
+  for(let i=0;i<180;i++){
     particles.push(new Particle(
       x,y,
       Math.random()*Math.PI*2,
-      Math.random()*4+2,
-      `hsl(${hue},100%,65%)`
+      Math.random()*5+2,
+      `hsl(${hue},100%,60%)`
     ));
   }
 }
 
-function animate(){
+function loop(){
   ctx.clearRect(0,0,canvas.width,canvas.height);
   particles=particles.filter(p=>p.life>0);
   particles.forEach(p=>{p.update();p.draw();});
-  requestAnimationFrame(animate);
+  requestAnimationFrame(loop);
 }
-animate();
+loop();
 
 function startFireworks(){
-  boom();
-  setInterval(boom,1300);
+  explode();
+  setInterval(explode,1400);
 }
 </script>
 
