--- a/index.html
+++ b/index.html
@@ -5,42 +5,40 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Chúc Mừng Năm Mới</title>
 
-<link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Be+Vietnam+Pro&display=swap" rel="stylesheet">
-
 <style>
-*{box-sizing:border-box}
-body{
+*{
+  box-sizing:border-box;
   margin:0;
-  font-family:'Be Vietnam Pro',sans-serif;
+  padding:0;
+}
+
+body{
   height:100vh;
   display:flex;
   justify-content:center;
   align-items:center;
-  background:url('tet-bg.png') center/cover no-repeat;
-  overflow:hidden;
+  background:url("tet-bg.png") center/cover no-repeat;
+  font-family:Arial, Helvetica, sans-serif;
 }
 
-/* PHÁO HOA */
-canvas{
-  position:fixed;
-  inset:0;
-  z-index:1;
-  pointer-events:none;
-}
-
-/* WRAP */
-.wrapper{
+/* KHUNG CHÍNH */
+.container{
   position:relative;
-  z-index:5;
+  width:300px;
+  height:260px;
 }
 
-/* ENVELOPE */
+/* PHONG BÌ */
 .envelope{
-  position:relative;
+  position:absolute;
+  bottom:0;
+  left:50%;
+  transform:translateX(-50%);
   width:260px;
-  height:170px;
+  height:160px;
 }
 
+/* THÂN */
 .envelope-body{
   position:absolute;
   bottom:0;
@@ -48,11 +46,11 @@ canvas{
   height:120px;
   background:#d32f2f;
   border-radius:0 0 16px 16px;
-  box-shadow:0 14px 30px rgba(0,0,0,.35);
+  box-shadow:0 10px 25px rgba(0,0,0,0.3);
   z-index:2;
 }
 
-/* FLAP */
+/* NẮP */
 .envelope-flap{
   position:absolute;
   top:0;
@@ -61,55 +59,57 @@ canvas{
   background:#b71c1c;
   clip-path:polygon(0 0,100% 0,50% 100%);
   transform-origin:top;
-  transition:transform 1s ease;
-  z-index:4;
+  transition:transform 0.8s ease;
+  z-index:3;
 }
 
 .envelope.open .envelope-flap{
   transform:rotateX(180deg);
 }
 
-/* CARD */
+/* THIỆP */
 .card{
   position:absolute;
+  bottom:30px;
   left:50%;
-  bottom:20px;
-  transform:translateX(-50%) translateY(140%);
+  transform:translateX(-50%) translateY(100%);
   width:300px;
-  background:#fff;
-  border-radius:20px;
-  padding:26px;
+  background:#ffffff;
+  border-radius:16px;
+  padding:24px;
   text-align:center;
-  box-shadow:0 20px 45px rgba(0,0,0,.35);
-  transition:transform 1.2s ease;
-  z-index:3;
+  box-shadow:0 15px 35px rgba(0,0,0,0.35);
+  transition:transform 1s ease;
+  z-index:1;
 }
 
 .envelope.show-card .card{
-  transform:translateX(-50%) translateY(-110%);
+  transform:translateX(-50%) translateY(-120%);
 }
 
-.card h1{
-  font-family:'Great Vibes',cursive;
+.card h2{
   color:#c62828;
-  font-size:38px;
+  margin-bottom:12px;
 }
 
 .card p{
   font-size:15px;
-  line-height:1.7;
+  line-height:1.6;
   color:#333;
 }
 
-/* BUTTON */
+/* NÚT */
 button{
-  margin-top:20px;
-  padding:10px 28px;
+  position:absolute;
+  bottom:-60px;
+  left:50%;
+  transform:translateX(-50%);
+  padding:10px 26px;
+  font-size:16px;
   border:none;
   border-radius:999px;
   background:#d32f2f;
   color:#fff;
-  font-size:16px;
   cursor:pointer;
 }
 </style>
@@ -117,115 +117,38 @@ button{
 
 <body>
 
-<canvas id="fireworks"></canvas>
-
-<div class="wrapper">
-  <div class="envelope" id="env">
+<div class="container">
+  <div class="envelope" id="envelope">
     <div class="envelope-flap"></div>
     <div class="envelope-body"></div>
 
     <div class="card">
-      <h1>Chúc Mừng Năm Mới</h1>
+      <h2>Chúc Mừng Năm Mới</h2>
       <p>
-        Chúc bạn bước sang năm mới với một trái tim bình an,
-        một tinh thần kiên định và niềm tin vào chính mình.
-        Mong rằng từng ngày trôi qua đều mang theo những bài học quý giá,
-        những niềm vui giản dị và động lực để bạn tiếp tục cố gắng.
-        Dù con đường phía trước còn dài,
-        hãy tin rằng mọi nỗ lực hôm nay sẽ trở thành thành quả mai sau.
+        Chúc bạn bước vào năm mới với sự bình an trong tâm hồn,
+        vững vàng trong suy nghĩ và bền bỉ trên con đường mình chọn.
+        Mong rằng mỗi ngày trôi qua đều mang lại thêm niềm tin,
+        động lực và những điều tốt đẹp giản dị nhưng ý nghĩa.
         <br><br>
-        An khang – May mắn – Thành công 🌸
+        An khang – May mắn – Thành công.
       </p>
     </div>
   </div>
 
-  <button id="open">Mở Thiệp</button>
+  <button id="openBtn">Mở Thiệp</button>
 </div>
 
-<audio id="music" src="tet-music.mp3"></audio>
-
 <script>
-/* OPEN */
-const env=document.getElementById('env');
-const btn=document.getElementById('open');
-const music=document.getElementById('music');
+const btn = document.getElementById("openBtn");
+const env = document.getElementById("envelope");
 
-btn.onclick=()=>{
-  env.classList.add('open');
-  setTimeout(()=>env.classList.add('show-card'),400);
-  btn.style.display='none';
-
-  music.volume=0;
-  music.play();
-  let v=0;
-  const fade=setInterval(()=>{
-    v+=0.02;
-    music.volume=v;
-    if(v>=1)clearInterval(fade);
-  },100);
-
-  startFireworks();
+btn.onclick = () => {
+  env.classList.add("open");
+  setTimeout(()=>{
+    env.classList.add("show-card");
+  },300);
+  btn.style.display="none";
 };
-
-/* FIREWORKS */
-const canvas=document.getElementById('fireworks');
-const ctx=canvas.getContext('2d');
-function resize(){canvas.width=innerWidth;canvas.height=innerHeight}
-resize();window.onresize=resize;
-
-let particles=[];
-class Particle{
-  constructor(x,y,angle,speed,color){
-    this.x=x;this.y=y;
-    this.vx=Math.cos(angle)*speed;
-    this.vy=Math.sin(angle)*speed;
-    this.life=80;
-    this.alpha=1;
-    this.color=color;
-  }
-  update(){
-    this.vy+=0.04;
-    this.x+=this.vx;
-    this.y+=this.vy;
-    this.alpha-=0.015;
-    this.life--;
-  }
-  draw(){
-    ctx.globalAlpha=this.alpha;
-    ctx.beginPath();
-    ctx.arc(this.x,this.y,2.2,0,Math.PI*2);
-    ctx.fillStyle=this.color;
-    ctx.fill();
-    ctx.globalAlpha=1;
-  }
-}
-
-function explode(){
-  const x=Math.random()*canvas.width;
-  const y=Math.random()*canvas.height*0.45;
-  const hue=Math.random()*360;
-  for(let i=0;i<180;i++){
-    particles.push(new Particle(
-      x,y,
-      Math.random()*Math.PI*2,
-      Math.random()*5+2,
-      `hsl(${hue},100%,60%)`
-    ));
-  }
-}
-
-function loop(){
-  ctx.clearRect(0,0,canvas.width,canvas.height);
-  particles=particles.filter(p=>p.life>0);
-  particles.forEach(p=>{p.update();p.draw();});
-  requestAnimationFrame(loop);
-}
-loop();
-
-function startFireworks(){
-  explode();
-  setInterval(explode,1400);
-}
 </script>
 
 </body>
