--- a/index.html
+++ b/index.html
@@ -119,69 +119,80 @@ p{
 /* ================= PHÁO HOA ================= */
 .firework {
             position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            width: 4px;
-            height: 4px;
+            width: 8px; /* Tăng kích thước tâm */
+            height: 8px;
+            border-radius: 50%;
         }
 
-        /* Tạo các hạt pháo hoa bằng box-shadow đa tầng */
-        .firework, .firework::before, .firework::after {
+        /* Lớp pháo chính: To và rõ */
+        .firework::before, .firework::after, .firework {
             content: "";
             position: absolute;
             border-radius: 50%;
-            /* Mỗi dòng trong box-shadow là một "viên pháo" 
-               Cấu trúc: x y color 
-            */
+            /* Tạo nhiều tia pháo hơn với box-shadow */
             box-shadow: 
-                0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff, 
-                0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff;
-            animation: explode 2s infinite ease-out;
+                0 0 #fff, 
+                0 -150px #ff0044, 150px 0 #00ccff, 
+                0 150px #ffdd00, -150px 0 #00ff88,
+                100px -100px #ff00ff, -100px -100px #ffffff,
+                100px 100px #ff8800, -100px 100px #00ffff,
+                50px -180px #ff3300, -50px -180px #33ff00,
+                180px -50px #6600ff, -180px -50px #ff00cc;
+            
+            filter: drop-shadow(0 0 5px white); /* Tạo hiệu ứng phát sáng */
+            animation: explode 1.5s infinite ease-out;
         }
 
-        /* Tầng pháo hoa thứ 2 (màu sắc khác) */
+        /* Lớp pháo nổ tầng 2: Lan xa hơn */
         .firework::before {
-            animation-duration: 2.5s;
-            animation-delay: -0.5s;
+            transform: rotate(45deg);
+            scale: 1.3;
+            animation-duration: 1.8s;
+            animation-delay: -0.2s;
         }
 
-        /* Tầng pháo hoa thứ 3 (nhỏ hơn, bay xa hơn) */
+        /* Lớp pháo nổ tầng 3: Nhỏ và lấp lánh */
         .firework::after {
-            animation-duration: 3s;
-            animation-delay: -1.2s;
+            transform: rotate(25deg);
+            scale: 0.7;
+            animation-duration: 2.2s;
+            animation-delay: -0.4s;
         }
 
         @keyframes explode {
             0% {
-                /* Bắt đầu tại tâm */
-                box-shadow: 0 0 #fff;
+                transform: scale(0);
+                opacity: 1;
+            }
+            50% {
                 opacity: 1;
             }
             100% {
-                /* Bắn tung ra nhiều hướng với nhiều màu sắc */
-                box-shadow: 
-                    -120px -150px #ff0044, 120px -150px #ffdd00, 
-                    -180px 20px #00ff88, 180px 20px #00ccff, 
-                    -50px 180px #ff00ff, 50px 180px #ff8800,
-                    -150px -50px #ffffff, 150px -50px #aa00ff,
-                    0px -200px #ffff00, 0px 200px #00ffff;
+                transform: scale(1.5); /* Nổ to ra 1.5 lần */
                 opacity: 0;
             }
         }
 
-        /* Đặt nhiều bông pháo ở các vị trí khác nhau */
-        .f1 { top: 30%; left: 20%; }
-        .f2 { top: 50%; left: 70%; scale: 1.5; }
-        .f3 { top: 70%; left: 40%; scale: 0.8; }
+        /* Vị trí các bông pháo trên màn hình */
+        .f1 { top: 20%; left: 25%; color: #ff0044; }
+        .f2 { top: 40%; left: 75%; color: #00ccff; animation-delay: 0.5s; }
+        .f3 { top: 60%; left: 40%; color: #ffdd00; animation-delay: 1s; scale: 1.2; }
+        .f4 { top: 15%; left: 60%; color: #00ff88; animation-delay: 0.3s; scale: 0.8; }
 
         h1 {
+            position: absolute;
+            bottom: 10%;
             color: white;
-            font-family: 'Arial', sans-serif;
-            text-transform: uppercase;
-            letter-spacing: 5px;
-            text-shadow: 0 0 20px #ff0044;
-            pointer-events: none;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            font-size: 3rem;
+            text-shadow: 0 0 10px #ff0044, 0 0 20px #ff0044;
+            letter-spacing: 10px;
+            animation: glow 2s infinite alternate;
+        }
+
+        @keyframes glow {
+            from { opacity: 0.5; }
+            to { opacity: 1; text-shadow: 0 0 30px #ff0044; }
         }
     </style>
 </head>
@@ -191,9 +202,9 @@ p{
     <div class="firework f1"></div>
     <div class="firework f2"></div>
     <div class="firework f3"></div>
+    <div class="firework f4"></div>
 
 </body>
-
 <!-- PHONG BÌ -->
 <div id="envelope-screen">
   <div class="envelope" id="env">
