--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
         function createFlower() {
             const f = document.createElement('div');
             f.className = 'flower';
-            f.innerHTML = Math.random() > 0.5 ? '🌸' : '🌼';
+            f.innerHTML = Math.random() > 0.5 ? '🌸' : '🌻';
             f.style.left = Math.random() * 100 + 'vw';
             f.style.fontSize = (Math.random() * 15 + 15) + 'px';
             const duration = Math.random() * 3 + 4;
