--- a/index.html
+++ b/index.html
@@ -140,9 +140,9 @@
 
     <div id="card-screen">
         <div class="card-body">
-            <h1 style="font-family: 'Dancing Script', cursive; color: #b71c1c; font-size: 40px; margin: 0;">Chúc Mừng Năm Mới</h1>
+            <h1 style="font-family: 'Dancing Script', cursive; color: #b71c1c; font-size: 40px; margin: 0;">Chúc Mừng Năm Mới Bính Ngọ</h1>
             <p id="wish" style="font-size: 18px; line-height: 1.6; color: #333; margin-top: 20px;"></p>
-            <div style="font-size: 40px; margin-top: 20px;">🌸🧧🧨🌼</div>
+            <div style="font-size: 40px; margin-top: 20px;">🌸🧧🧨</div>
         </div>
     </div>
 
