--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
         function createFlower() {
             const flower = document.createElement("div");
             flower.className = "flower";
-            flower.innerText = Math.random() > 0.5 ? "🌼" : "🌸";
+            flower.innerText = Math.random() > 0.5 ? "🌻" : "🌸";
             const startPos = Math.random() * window.innerWidth;
             const duration = Math.random() * 3 + 4;
             flower.style.left = startPos + "px";
